<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".PortoActivity"
    >
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/maincol">
        <RelativeLayout
            android:id="@+id/relativeleft"
            android:layout_width="580px"
            android:layout_height="wrap_content"
            >


            <ImageView
                android:id="@+id/image"
                android:layout_width="397px"
                android:layout_height="397px"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="25px"
                android:src="@drawable/foto">
            </ImageView>

            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image"
                android:fontFamily="@font/poppinsmedium"
                android:paddingHorizontal="50px"
                android:text="@string/info"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="27px">
            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeright"
            android:layout_width="540px"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/relativeleft">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="72px"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppinsmedium"
                        android:textSize="22px">
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jian_jeraus_young"
                        android:layout_marginTop="8px"
                        android:textColor="@color/gold"
                        android:fontFamily="@font/argentineopti"
                        android:textSize="32px">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="72px"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/major"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppinsmedium"
                        android:textSize="22px">
                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8px"
                        android:fontFamily="@font/argentineopti"
                        android:text="@string/information_systems"
                        android:textColor="@color/gold"
                        android:textSize="32px">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="72px"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/student_id"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppinsmedium"
                        android:textSize="22px">
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_03081210009"
                        android:layout_marginTop="8px"
                        android:textColor="@color/gold"
                        android:fontFamily="@font/argentineopti"
                        android:textSize="32px">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/intake"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppinsmedium"
                        android:textSize="22px">
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_2021"
                        android:layout_marginTop="8px"
                        android:textColor="@color/gold"
                        android:fontFamily="@font/argentineopti"
                        android:textSize="32px">
                    </TextView>
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeright"
            android:layout_marginTop="138px">

            <TextView
                android:id="@+id/experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/experiences"
                android:textColor="@color/white"
                android:fontFamily="@font/poppinssemibold"
                android:textSize="42px"
                android:gravity="center"
                android:layout_marginBottom="25px">
            </TextView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/experience"
                android:layout_centerHorizontal="true">
                <LinearLayout
                    android:layout_centerHorizontal="true"
                    android:layout_width="626px"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="39px"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/student_association_of_information_systems_study_program_2022_2023"
                        android:textColor="@color/gold"
                        android:fontFamily="@font/argentineopti"
                        android:textSize="27px"
                        android:textAlignment="center"
                        android:layout_marginBottom="3px">
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/president"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppinsmedium"
                        android:textSize="22px"
                        android:textAlignment="center">
                    </TextView>

                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />
                </LinearLayout>

                <LinearLayout
                    android:layout_centerHorizontal="true"
                    android:layout_width="626px"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="39px"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ambassadors_of_uph_medan_campus_2022"
                        android:textColor="@color/gold"
                        android:fontFamily="@font/argentineopti"
                        android:textSize="27px"
                        android:textAlignment="center"
                        android:layout_marginBottom="3px">
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/second_runner_up"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppinsmedium"
                        android:textSize="22px"
                        android:textAlignment="center">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_centerHorizontal="true"
                    android:layout_width="626px"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="39px"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gracious_quest"
                        android:textColor="@color/gold"
                        android:fontFamily="@font/argentineopti"
                        android:textSize="27px"
                        android:textAlignment="center"
                        android:layout_marginBottom="3px">
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/head_of_committee"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppinsmedium"
                        android:textSize="22px"
                        android:textAlignment="center">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_centerHorizontal="true"
                    android:layout_width="626px"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ambassadors_of_uph_medan_campus_2023"
                        android:textColor="@color/gold"
                        android:fontFamily="@font/argentineopti"
                        android:textSize="27px"
                        android:textAlignment="center"
                        android:layout_marginBottom="3px">
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vice_project_manager"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppinsmedium"
                        android:textSize="22px"
                        android:textAlignment="center">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/maincol"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40px"
        android:background="@color/gold"
        android:textColor="@color/black"
        android:fontFamily="@font/poppinsmedium"
        android:text="Edit">
    </Button>

</RelativeLayout>
